# ui-ux-muse-guide

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  RUNBOOK.md  docker-compose.yml  package.json
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3f054a3b0c82_initial_schema.py  a1b2c3d4e5f6_add_donor_deleted_at.py  b2c3d4e5f6a7_collapse_roles_admin_user.py
backend/app/: main.py  seed.py
backend/app/adapters/evaluation/: anthropic_eval.py  (+2 more)
backend/app/core/: config.py  database.py  deps.py  errors.py  security.py
backend/app/models/: __init__.py  audit.py  donor.py  tenant.py  user.py
backend/app/routes/: audit.py  auth.py  documents.py  donors.py  settings.py  users.py
backend/app/schemas/: common.py  domain.py
backend/app/services/: donor.py
backend/fixtures/: README.md
backend/rules/bt/: bt_005_recovery_timing.yaml  bt_007_nat_panel.yaml  bt_008_physical_assessment.yaml  bt_009_newborn_health.yaml
backend/rules/bt_ms/: bt_001_idt_required.yaml  bt_002_drai_required.yaml  bt_003_consent_required.yaml  bt_004_gestational_age.yaml  bt_006_culture_results.yaml  bt_010_md_eligibility.yaml  bt_013_transfusion_dilution.yaml  bt_014_high_risk_composite.yaml  bt_015_recovery_site.yaml
backend/rules/ms/: ms_001_nat_panel.yaml  ms_002_physical_assessment.yaml  ms_003_md_eligibility.yaml  ms_004_cause_of_death.yaml  ms_005_autopsy_review.yaml  ms_005rt_recovery_timing.yaml  ms_008_culture_clostridium_gas.yaml  ms_010_age_criteria.yaml
backend/scripts/: run_birth_tissue_pipeline.py
(+152 files in other folders)
